--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,9 @@
 body {
   background-image: url(images/background.jpg);
-  background-size: 100%;
+  background-size: 110%;
+}
+
+main {
+  width: 800px;
+  margin: auto;
 }
