--- a/styles.css
+++ b/styles.css
@@ -62,3 +62,31 @@ main {
   text-shadow: 2px 2px black;
   color: white;
 }
+
+@media screen and (max-width: 1200px) {
+  body {
+    background-size: 4000px 2000px;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .impactful {
+    font-size: 1em;
+  }
+  .banner {
+    width: 90%;
+    min-width: 400px;
+  }
+  main {
+    width: 90%;
+    min-width: 400px;
+  }
+  .backing_box {
+    width: 90%;
+    min-width: 400px;
+  }
+  #useful_things {
+    width: 90%;
+    min-width: 400px;
+  }
+}
